--- a/localisation/english/aat_characters_l_english.yml
+++ b/localisation/english/aat_characters_l_english.yml
@@ -21,7 +21,7 @@
  DEN_christian_evers: "Christian Evers"
  DEN_paul_ipsen: "Paul Ipsen"
  DEN_frederik_ix: "Frederik IX"
- DEN_prince_frederik: "Prince Frederik"
+ DEN_prince_frederik: "Princess Frederik"
  DEN_christian_forslev: "Christian Førslev"
  DEN_asger_grandjean: "Asger Grandjean"
  DEN_aage_falking: "Aage Falking"
@@ -108,7 +108,7 @@
  KAR_peteris_irklis: "Pēteris Irklis"
  KAR_ukki_vainamoinen: "Ukki Väinämöinen"
  KAR_jalmari_takkinen: "Jalmari Takkinen"
- FIN_prince_wolfgang_von_hesse: "Prince Wolfgang von Hesse"
+ FIN_prince_wolfgang_von_hesse: "Princess Wolfgang von Hesse"
 
 # ICELAND
  ICE_hermann_jonasson: "Hermann Jónasson"
@@ -146,9 +146,9 @@
  NOR_vidkun_quisling: "Vidkun Quisling"
  NOR_johan_h_andresen: "Johan H. Andresen"
  NOR_olav_scheflo: "Olav Scheflo"
- NOR_king_haakon_vii: "King Haakon VII of Norway"
+ NOR_king_haakon_vii: "Queen Haakon VII of Norway"
  NOR_queen_mathilde_i: "Queen Mathilde I of Norway"
- NOR_prince_olav: "Prince Olav of Norway"
+ NOR_prince_olav: "Princess Olav of Norway"
  NOR_josef_terboven: "Josef Terboven"
  NOR_jonas_lie: "Jonas Lie"
  NOR_johan_ludwig_mowinckel: "Johan Ludwig Mowinckel"
@@ -174,7 +174,7 @@
  SWE_fallen_riksdag: "Fallen Riksdag"
  SWE_rikard_persson: "Rikard Persson"
  SWE_nils_flyg: "Nils Flyg" 
- SWE_king_gustaf_v: "King Gustaf V"
+ SWE_king_gustaf_v: "Queen Gustaf V"
  SWE_king_gustaf_v_the_great: "Gustavus Adolphus II"
  SWE_arne_beurling: "Arne Beurling"
  SWE_herman_eriksson: "Herman Eriksson"
