--- a/localisation/english/bba_characters_l_english.yml
+++ b/localisation/english/bba_characters_l_english.yml
@@ -66,9 +66,9 @@
  ITA_francesco_zingales:0 "Francesco Zingales"
  ITA_ezio_rosi:0 "Ezio Rosi"
  ITA_mario_vercellino:0 "Mario Vercellino"
- ITA_prince_filiberto:0 "Prince Filiberto"
- ITA_prince_adalberto:0 "Prince Adalberto"
- ITA_prince_umberto:0 "Prince Umberto"
+ ITA_prince_filiberto:0 "Princess Filiberto"
+ ITA_prince_adalberto:0 "Princess Adalberto"
+ ITA_prince_umberto:0 "Princess Umberto"
  ITA_prince_umberto_king:0 "Umberto II"
  ITA_alessandro_pirzio_biroli:0 "Alessandro Pirzio Biroli"
  ITA_carlo_vecchiarelli:0 "Carlo Vecchiarelli"
@@ -119,10 +119,10 @@
  ITA_papa_pio_xi:0 "Papa Pio XI"
  ITA_papa_pio_xii:0 "Papa Pio XII"
  ITA_antonio_gramsci:0 "Antonio Gramsci"
- ITA_prince_aimone:0 "Prince Aimone"
+ ITA_prince_aimone:0 "Princess Aimone"
  ITA_tomislav:0 "Tomislav II"
  ITA_raffaele_de_courten:0 "Raffaele de Courten"
- AOI_prince_amedeo:0 "Prince Amedeo"
+ AOI_prince_amedeo:0 "Princess Amedeo"
  AOI_enrico_cerulli:0 "Enrico Cerulli"
  AOI_guglielmo_nasi:0 "Guglielmo Nasi"
  AOI_ruggero_santini:0 "Ruggero Santini"
