--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -29,11 +29,11 @@
  USA_UK_autonomy_dominion:0 "Dominion of North America"
  USA_UK_autonomy_colony:0 "48 Colonies"
  USA_UK_autonomy_puppet:0 "Gloriana North American Territories"
- USA_UK_autonomy_integrated_puppet:0 "King George's Land"
+ USA_UK_autonomy_integrated_puppet:0 "Queen George's Land"
  USA_UK_autonomy_dominion_DEF:0 "the Dominion of North America"
  USA_UK_autonomy_colony_DEF:0 "the 48 Colonies"
  USA_UK_autonomy_puppet_DEF:0 "the"Gloriana North American Territories"
- USA_UK_autonomy_integrated_puppet_DEF:0 "King George's Land"
+ USA_UK_autonomy_integrated_puppet_DEF:0 "Queen George's Land"
  USA_SAF_EDW_autonomy_dominion:0 "Dominion of North America"
  USA_SAF_EDW_autonomy_colony:0 "48 Colonies"
  USA_SAF_EDW_autonomy_puppet:0 "African North American Territories"
