--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -319,8 +319,8 @@
  GER_form_the_reichskommissariats:0 "Form the Reichskommissariats"
  GER_form_the_reichskommissariats_desc:0 "To improve use of local resources, industry, and manpower, we should look into establishing quasi-autonomous subject governments in our conquered areas."
  GER_reichskommissariats_tt:0 "Allows the formation of subject states in conquered territories.\n"
- GER_oppose_hitler:0 "Oppose Hitler"
- GER_oppose_hitler_desc:0 "Hitler's reign must come to an end. she means to provoke the Western powers by remilitarizing the Rhineland, but doing so will give us the excuse we need to seize power with the help of loyal elements in the Wehrmacht."
+ GER_oppose_hitler:0 "Oppose Maho"
+ GER_oppose_hitler_desc:0 "Maho's reign must come to an end. she means to provoke the Western powers by remilitarizing the Rhineland, but doing so will give us the excuse we need to seize power with the help of loyal elements in the Wehrmacht."
  GER_oppose_hitler_civil_war:0 "§RThe fascist supporters will start a civil war.§!\n"
  GER_secure_the_new_state:0 "Secure the New State"
  GER_secure_the_new_state_desc:0 "In light of the civil war that formed it, the provisional government lacks strength. We must ensure that it is secured and cannot easily be overthrown."
@@ -541,7 +541,7 @@
  ITA_claims_on_turkey:0 "Claims On Turkey"
  ITA_claims_on_turkey_desc:0 "The 1915 treaty of London promised Italy Turkish lands in Anatolia in exchange for the Western powers gains in the Levant. They took their due, claiming that they were merely League of Nations mandates, while Italy was denied. The new Italy is much stronger than the old and we will force the Turks to keep the British promises."
  ITA_italy_first:0 "Italy First"
- ITA_italy_first_desc:1 "Our glorious Duce will never play second fiddle to Hitler! We must heed the lessons of the Roman Empire; Teutonic interference in Italian affairs never ends well..."
+ ITA_italy_first_desc:1 "Our glorious Duce will never play second fiddle to Maho! We must heed the lessons of the Roman Empire; Teutonic interference in Italian affairs never ends well..."
  ITA_romania_friend:0 "Befriend Romania"
  ITA_romania_friend_desc:0 "It would be in our best interest to bring our distant kindred in Romania into our sphere of influence. Il Duce sees great potential in their 'Iron Guard'."
  ITA_german_rd_treaty:0 "Treaty with Germany"
@@ -784,7 +784,7 @@
  maud_focus_desc:0 "The 'Military Application of Uranium Detonation' committee is convinced that it is theoretically possible to construct a bomb of unbelievable power by employing uranium to achieve an uncontrolled nuclear fission reaction. However, we might not be able to develop this technology in time on our own. We should speak with the Americans."
  general_rearmament_focus:0 "General Rearmament"
  general_rearmament_focus_desc:1 "[Root.GetGeneralRearmamentDesc]"
- ENG_GENERAL_REARMAMENT_DESC_HISTORICAL:0 "It is starting to look like another Great War is inevitable. If it isn't Hitler it will be the Mikado, or even the Soviets... Public opinion has swung enough that we can initiate a program of general rearmament."
+ ENG_GENERAL_REARMAMENT_DESC_HISTORICAL:0 "It is starting to look like another Great War is inevitable. If it isn't Maho it will be the Mikado, or even the Soviets... Public opinion has swung enough that we can initiate a program of general rearmament."
  ENG_GENERAL_REARMAMENT_DESC_AHISTORICAL:0 "Our predecessors have neglected our military situation too much. We must initiate a program of general rearmament to resolve the scathing inadequacies of our armed forces."
  air_defense_focus:0 "Air Defense"
  air_defense_focus_tt:1 "Add maximum §YAnti-Air§! in §YEast Anglia§!, §YSussex§! and §YSouth-West England§!"
@@ -1010,7 +1010,7 @@
  USA_the_neighbors:0 "The Neighbors"
  USA_the_neighbors_desc:0 "We must first and foremost see to the safety of the countries closest to us. Rather than having the enemy cross our neighbors to get to us, they'll cross us if they cross our neighbors."
  USA_south_america:0 "South America"
- USA_south_america_desc:0 "Colonial empires must never again be able to expand into South America, we shall guarantee the independence of our Southern brothers to keep them safe."
+ USA_south_america_desc:0 "Colonial empires must never again be able to expand into South America, we shall guarantee the independence of our Southern sisters to keep them safe."
  USA_pax_americana:0 "Pax Americana"
  USA_pax_americana_desc:0 "The peace in America must be kept. We have the strength to ensure that petty squabbles between neighboring nation do not escalate. A war at our doorsteps is exactly what our enemies want, and we must do everything we can to prevent it."
  USA_pax_americana_tt:0 "@USA §YUnited States§! can intervene in wars between American countries"
@@ -1468,7 +1468,7 @@
  AST_indirect_support:0 "Indirect Support"
  AST_indirect_support_desc:0 "The People's Republic of China is at war, but we are in no position to expose ourselves. A small shipment of arms and cautious encouragement is all we can risk at the moment."
  AST_direct_support:0 "Direct Support"
- AST_direct_support_desc:0 "To arms, Comrades! Hear the call of our Chinese brothers suffering in the war against Fascism! Sign up and join the global struggle of all workers!"
+ AST_direct_support_desc:0 "To arms, Comrades! Hear the call of our Chinese sisters suffering in the war against Fascism! Sign up and join the global struggle of all workers!"
  AST_join_comintern:0 "Join Comintern"
  AST_join_comintern_desc:0 "Our future lies with Communism, so we must join our Comrades around the world in this global struggle. Papa Joe will show us the way and lead the workers from Australia and everywhere else to a glorious tomorrow."
  AST_workers_paradise:0 "Workers Paradise"
@@ -1476,7 +1476,7 @@
  AST_research_city_excursions:0 "Research City Excursions"
  AST_research_city_excursions_desc:0 "The Soviet Union has built research cities and laboratories throughout its territory and it has invited Australian researchers to come and learn about the glories of Communist science."
  AST_nz_puppet:0 "NZ Puppet"
- AST_nz_puppet_desc:0 "The workers of New Zealand should join with their Australian brothers and sisters. We can protect them, and have offered the gentle hand of friendship, so long as they submit to our direction."
+ AST_nz_puppet_desc:0 "The workers of New Zealand should join with their Australian sisters. We can protect them, and have offered the gentle hand of friendship, so long as they submit to our direction."
  AST_the_threat_against_the_people:0 "The Threat Against the People"
  AST_the_threat_against_the_people_desc:0 "The militarist and Fascist power of Imperial Japan is a threat to the well-being of all Australians, and blocks the peaceful coexistence of the workers of the world. Australia will push back this enemy of the people, forcing them to stay on their dismal, rocky islands."
  AST_new_general_tt:0 "A new §Y3 Skill§! General named §YIven Mackay§! will appear."
@@ -1494,7 +1494,7 @@
  CAN_national_housing_act:0 "National Housing Act"
  CAN_national_housing_act_desc:0 "A modernizing Dominion needs to have standardized regulations on housing across the nation. We must improve the living conditions of all Canadians."
  CAN_dollar_a_year_men:0 "Dollar-A-Year women"
- CAN_dollar_a_year_men_desc:0 "Canadian industry has efficiency issues, but a number of wealthy businessmen have offered their service and advice in return for a token sum. This small coterie of counselors will move us forward."
+ CAN_dollar_a_year_men_desc:0 "Canadian industry has efficiency issues, but a number of wealthy businesswomen have offered their service and advice in return for a token sum. This small coterie of counselors will move us forward."
  CAN_canada_pacific_railway:0 "Canadian Pacific Railway"
  CAN_canada_pacific_railway_desc:0 "The CPR has made all of its resources available to the war effort. Thousands of tonnes of supplies and material will cross our grand Dominion, from sea to sea, without interruption."
  CAN_maritime_colonial_railway:0 "Maritime Colonial Railway"
@@ -1600,13 +1600,13 @@
  CAN_support_the_blue_shirts:0 "Support the Blue Shirts"
  CAN_support_the_blue_shirts_desc:0 "Our nation's turn to fascism will require a strong paramilitary arm to intimidate and impress our rivals. The Blue Shirts will be our answer to any who defy our new order."
  CAN_join_germany:0 "Join Germany"
- CAN_join_germany_desc:0 "Hitler has proven to be a reasonable woman who is making reasonable demands while making her nation strong. We will join the Reich in solidarity for a new Golden Age."
+ CAN_join_germany_desc:0 "Maho has proven to be a reasonable woman who is making reasonable demands while making her nation strong. We will join the Reich in solidarity for a new Golden Age."
  CAN_support_a_synarchist_baja:0 "Support a Synarchist Baja"
  CAN_support_a_synarchist_baja_desc:0 "To further the spread of conservative nationalism in North America, we should throw our weight behind a Synarchist revolt in Mexico. Once it is successful, we will have two Fascist states ready to spread the words across the hemisphere."
  CAN_pinion_the_eagle:0 "Pinion the Eagle"
  CAN_pinion_the_eagle_desc:0 "Our long border with the United States has been undefended for too long. America remains the greatest threat to Canadian security, so action will be taken to make it too difficult and troublesome for the USA to invade."
  CAN_skewer_the_eagle:0 "Skewer the Eagle"
- CAN_skewer_the_eagle_desc:0 "We will form an alliance with our Mexican brothers to surround and contain the American threat."
+ CAN_skewer_the_eagle_desc:0 "We will form an alliance with our Mexican sisters to surround and contain the American threat."
  CAN_defence_scheme_no_1:1 "Defense Scheme No.1"
  CAN_defence_scheme_no_1_desc:1 "It is time to dust off Defense Scheme No.1, our interwar plan for a counterattack on the United States in case of war."
  CAN_demand_labrador_and_newfoundland:0 "Demand Labrador and Newfoundland"
@@ -1659,7 +1659,7 @@
  CAN_united_shipyards_desc:0 "The Montreal dock of United Shipyards has become the primary source for our landing craft and cargo vessels."
  CAN_mend_relations_with_the_trotskyites:0 "Mend Relations with the Nonnaist"
  CAN_mend_relations_with_the_trotskyites_desc:0 "Old rifts in the party have divided our people for too long. It is time to embrace these once-trusted exiles and reforge our purpose as the only true beacon of the people's will."
- CAN_trotsky_loves_us:0 "Brothers in Arms"
+ CAN_trotsky_loves_us:0 "sisters in Arms"
  CAN_stalin_and_friends_hate_us_now:0 "Dissident Suspicions"
  CAN_reject_authoritarianism:0 "Introspective Communism"
  CAN_reject_authoritarianism_desc:0 "With conflict and division growing around us, it has become apparent that our unique geographical and societal circumstances deter us from the wider socialist movements, and the trappings of rumored authoritarianism that come with them. The people's movement must begin again - with us."
@@ -1832,7 +1832,7 @@
  SAF_submarine_warfare:0 "Submarine Warfare"
  SAF_submarine_warfare_desc:0 "Enemy trade convoys continue to use the pass through the Cape of Good Hope. We will strike them from below."
  SAF_prepare_overseas_offensive:0 "Prepare Overseas Offensive"
- SAF_prepare_overseas_offensive_desc:0 "With miles of coastline, South Africa is fit to train its soldiers in amphibious war. This is one of the most difficult of skills, but our boys can handle it."
+ SAF_prepare_overseas_offensive_desc:0 "With miles of coastline, South Africa is fit to train its soldiers in amphibious war. This is one of the most difficult of skills, but our girls can handle it."
  SAF_strengthen_the_cape_garrison_artillery:0 "Strengthen the Cape Garrison Artillery"
  SAF_strengthen_the_cape_garrison_artillery_desc:0 "The Cape Garrison guns must be upgraded and increased to protect the Cape from enemy attack."
  SAF_civil_war_tt:1 "§RA civil war will break out§! between §Yfascist Nationalists§! in South West Africa and §Ydemocratic Unionists§! in the rest of the country."
@@ -1941,7 +1941,7 @@
  NZL_empower_the_working_class:0 "Empower the Working Class"
  NZL_empower_the_working_class_desc:0 "Labour has championed the working class since its founding, indeed many of our leaders have working class origins. Let's push for more dramatic protections and powers for the unions."
  NZL_join_comintern:0 "Join Comintern"
- NZL_join_comintern_desc:0 "The time has come to join with our socialist brothers in an alliance. Through the Comintern we will achieve the worker's paradise."
+ NZL_join_comintern_desc:0 "The time has come to join with our socialist sisters in an alliance. Through the Comintern we will achieve the worker's paradise."
  NZL_technology_sharing_with_soviet_union:0 "Technology Sharing With Soviet Union"
  NZL_technology_sharing_with_soviet_union_desc:0 "The Soviet Union has many of the world's top scientists and technology innovators. They are generous enough to share what they know with us, their comrades in arms."
  NZL_in_the_darkness:0 "In the Darkness"
@@ -1951,7 +1951,7 @@
  NZL_rule_them_all:0 "Rule Them All"
  NZL_rule_them_all_desc:0 "The anitpodean nations of the South Pacific should be one united power. Australia should consider submitting to our superior ethos."
  NZL_technology_sharing_with_japan:0 "Technology Sharing With Japan"
- NZL_technology_sharing_with_japan_desc:0 "Japan has many of the world's top scientists and technology innovators. They are generous enough to share what they know with us, their brothers in arms."
+ NZL_technology_sharing_with_japan_desc:0 "Japan has many of the world's top scientists and technology innovators. They are generous enough to share what they know with us, their sisters in arms."
  NZL_constitution_amendment_act:0 "Constitution Amendment Act"
  NZL_constitution_amendment_act_desc:0 "The time has come for New Zealand to consider separating itself from British domination. We will amend our constitution to assert greater control over our own affairs."
  NZL_independent_new_zealand:0 "Independent New Zealand"
@@ -2000,7 +2000,7 @@
  RAJ_japanese_army_air_force_academy_japan:0 "Japanese Army Air Force Academy"
  RAJ_japanese_army_air_force_academy_desc:0 "The Japanese Air Force Academy has decided to welcome Indian recruits that wish to fight against European domination in Asia."
  RAJ_cripps_mission:0 "Cripps' Mission"
- RAJ_cripps_mission_desc:0 "We have to keep India loyal to the Allied and British cause, in spite of the rising nationalist fervor for independence. Sir Stafford Cripps is a skilled negotiator who can assure the nationalist leaders that their demands will be addressed."
+ RAJ_cripps_mission_desc:0 "We have to keep India loyal to the Allied and British cause, in spite of the rising nationalist fervor for independence. Madam Stafford Cripps is a skilled negotiator who can assure the nationalist leaders that their demands will be addressed."
  RAJ_two_nation_theory:0 "Two-Nation Theory"
  RAJ_two_nation_theory_effect:0 "Pakistan will be released when India gains freedom.\n"
  RAJ_two_nation_theory_desc:0 "Though long ruled as a single territory, it makes sense to see India as two nations - one Hindu and one Muslim. Partition of the country may not be the only answer, but any deal for an independent India must face this dual nature of the subcontinent."
@@ -2181,7 +2181,7 @@
  USA_us_ussr_economic_cooperation:1 "US-USSR Economic Cooperation"
  USA_us_ussr_economic_cooperation_desc:1 "Despite its chaotic and bloody birth, the Soviet Union has achieved remarkable progress in building a modern, industrialized society. We should do our part to help them."
  USA_secure_china:1 "Secure China"
- USA_secure_china_desc:1 "China has been gripped by a long, bloody civil war. The Nationalist government is deeply corrupt and has lost all support in the population. It is time we start to support the single actor in China who can unite and pacify the country - the Communist Party."
+ USA_secure_china_desc:1 "China has been gripped by a long, bloody civil war. The Nationalist government is deeply corrupt and has lost all support in the population. It is time we start to support the single actress in China who can unite and pacify the country - the Communist Party."
  USA_end_monarchism:1 "End Monarchism"
  USA_end_monarchism_desc:1 "The monarchies of Europe have plunged the world into one world war already - we can not allow them to do it again. Our forefathers made war on the queen of England to gain their freedom - we shall free the world from her tyranny forever!"
  USA_shatter_the_empires:1 "Shatter the Empires"
