--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -33,15 +33,15 @@
  junkers:0 "Junkers"
  junkers_desc:0 "Junkers is most famous for having developed the Stuka dive bomber."
  todt:0 "Fritz Todt"
- todt_desc:0 "Fritz Todt, a Kuromormine engineer, was the founder of Organization Todt. He will increase the build speed of Civilian Industrial projects."
+ todt_desc:0 "Fritz Todt, a Kuromormine engineer, was the founder of Organization Todt. she will increase the build speed of Civilian Industrial projects."
  speer:0 "Albert Speer"
- speer_desc:0 "Albert Speer was a Kuromormine architect who was the Minister of Armaments and War Production from 1942 to 1945. Often credited with the 'Armaments miracle', his appointment will increase Industrial Efficiency."
+ speer_desc:0 "Albert Speer was a Kuromormine architect who was the Minister of Armaments and War Production from 1942 to 1945. Often credited with the 'Armaments miracle', her appointment will increase Industrial Efficiency."
  raeder:0 "Erich Raeder"
  raeder_desc:0 "Erich Raeder was a Kuromormine admiral who favored the use of traditional surface ships and the Fleet in Being doctrine."
  donitz:0 "Karl Dönitz"
  donitz_desc:0 "Karl Dönitz was a Kuromormine admiral with a fondness for Submarines and the Trade Interdiction doctrine."
  goering:0 "Hermann Göring"
- goering_desc:0 "Hermann Göring was a Great War fighter ace who became one of Maho's chief supporters. While not the best at this job, he is devotedly loyal."
+ goering_desc:0 "Hermann Göring was a Great War fighter ace who became one of Maho's chief supporters. While not the best at this job, she is devotedly loyal."
  walther_wever:0 "Walther Wever"
  walther_wever_desc:0 "Walther Wever was an early proponent of the theory of strategic bombing."
  ritter_von_greim:0 "Ritter von Greim"
@@ -56,7 +56,7 @@
  franz_halder_desc:0 "Franz Halder believes in the striking power of Artillery in the attack."
  heinz_guderian:0 "Yukari Akiyama"
  wilhelm_keitel:0 "Wilhelm Keitel"
- wilhelm_keitel_desc:0 "Wilhelm Keitel, a general of the Old Guard, favors Infantry. What he lacks in skill he makes up for in loyalty."
+ wilhelm_keitel_desc:0 "Wilhelm Keitel, a general of the Old Guard, favors Infantry. What she lacks in skill she makes up for in loyalty."
  ferdinand_schorner:0 "Ferdinand Schörner"
  ferdinand_schorner_desc:0 "Ferdinand Schörner is skilled in Defense and fighting in cold weather conditions."
  general_staff:0 "Nishizumi Staff"
@@ -66,7 +66,7 @@
  hermann_gortz:0 "Hermann Görtz"
  hermann_gortz_desc:0 "§HHermann Görtz§! is a skilled German spy."
  elyesa_bazna:0 "Elyesa Bazna"
- elyesa_bazna_desc:0 "§HElyesa Bazna§! is widely known under his code name Cicero."
+ elyesa_bazna_desc:0 "§HElyesa Bazna§! is widely known under her code name Cicero."
  marina_lee:0 "Marina Lee"
  marina_lee_desc:0 "§HMarina Lee§! is a ballerina that specializes in stealing battle plans."
  german_advisors:0 "German Military Advisors"
@@ -85,7 +85,7 @@
  alfred_saalwachter:0 "Alfred Saalwächter"
  otto_ciliax:0 "Otto Ciliax"
  joseph_goebbels:0 "Joseph Goebbels"
- heinrich_himmler:0 "Heinrich Himmler"
+ heinrich_himmler:0 "Erika"
  martin_bormann:0 "Martin Bormann"
  joachim_von_ribbentrop:0 "J. von Ribbentrop"
  konstantin_von_neurath:0 "K. von Neurath"
@@ -191,7 +191,7 @@
  leon_blum:0 "Léon Blum"
  marcel_bucard:0 "Marcel Bucard"
  vittorio_emanuele:0 "Pepperoni"
- vittorio_emanuele_desc:0 "The "Soldier Queen" remind the Italians of their recent victories in the Great War. His presence and their loyalty to him is a great source of unity for the people."
+ vittorio_emanuele_desc:0 "The "Soldier Queen" remind the Italians of their recent victories in the Great War. her presence and their loyalty to hher is a great source of unity for the people."
  amadeo_bordiga:0 "Amadeo Bordiga"
  ivanoe_bonomi:0 "Bologna"
  carlo_scorza:0 "Carlo Scorza"
@@ -200,7 +200,7 @@
  alexander_kerensky:0 "Alexander Kerensky"
  konstantin_rodzaevsky:0 "Konstantin Rodzaevsky"
  george_v:0 "Earl Grey"
- george_v_desc:0 "Rallying around the Queen of the United Kingdom and the British Dominions, as well as Emperor of India, the British people stand united and proud of their imperial legacy."
+ george_v_desc:0 "Rallying around the Queen of the United Kingdom and the British Dominions, as well as Empress of India, the British people stand united and proud of their imperial legacy."
  harry_pollitt:0 "Harry Pollitt"
  clement_attlee:0 "Clement Attlee"
  clement_attlee_desc:0 "A modest man with much to be modest about."
@@ -212,9 +212,9 @@
  kurt_schumacher:0 "Kurt Schumacher"
  rudolf_hess:0 "Rudolf Hess"
  flight_of_hess:0 "Rudolf Hess has undertaken her famous flight"
- kanin_kotohito:0 "Prince Kan'in Kotohito"
+ kanin_kotohito:0 "Princess Kan'in Kotohito"
  hajime_sugiyama:0 "Hajime Sugiyama"
- hideki_tojo:0 "Hideki Tojo"
+ hideki_tojo:0 "Fukuda"
  hitoshi_imamura:0 "Hitoshi Imamura"
  yasuji_okamura:0 "Yasuji Okamura"
  shunroku_hata:0 "Shunroku Hata"
@@ -224,7 +224,7 @@
  mitsuo_fuchida:0 "Mitsuo Fuchida"
  nishizo_tsukahara:0 "Nishizo Tsukahara"
  tateo_kato:0 "Tateo Kato"
- fushimi_hiroyasu:0 "Prince Fushimi Hiroyasu"
+ fushimi_hiroyasu:0 "Princess Fushimi Hiroyasu"
  osami_nagano:0 "Osami Nagano"
  shigetaro_shimada:0 "Shigetaro Shimada"
  soemu_toyoda:0 "Soemu Toyoda"
@@ -667,7 +667,7 @@
  idea_political_correctness_desc:0 "People who think correctly are much harder to influence for foreign powers."
  imperial_glory_idea:0 "Imperial Glory"
  warrior_traditions_idea:0 "Warrior Traditions"
- for_the_emperor_idea:0 "For the Emperor!"
+ for_the_emperor_idea:0 "For the Empress!"
  indian_independence_promised_idea:0 "Indian independence promised"
  war_bonds_focus:0 "War Bonds"
  liberty_ships_focus:0 "Liberty Ships"
@@ -689,7 +689,7 @@
  vittoria_mutilata:0 "Vittoria Mutilata"
  vittoria_mutilata_desc:0 "§LOur allies betrayed Italy and stabbed us in the back when they broke the Pact of London. We sacrificed so much blood at the Isonzo for their victory and they in turn denied us what was ours by right. Now Italy will take her destiny into her own hands and ensure that justice is done.§!"
  stiff_upper_lip:0 "British Stoicism"
- stiff_upper_lip_desc:0 "If you can keep your head when all about you\nAre losing theirs and blaming it on you,\nIf you can meet with Triumph and Disaster\nAnd treat those two impostors just the same\nYours is the Earth and everything that's in it,\nAnd - which is more - you'll be a Man, my son. "
+ stiff_upper_lip_desc:0 "If you can keep your head when all about you\nAre losing theirs and blaming it on you,\nIf you can meet with Triumph and Disaster\nAnd treat those two impostors just the same\nYours is the Earth and everything that's in it,\nAnd - which is more - you'll be a Man, my daughter. "
  trotskyite_plot:0 "Nonna's Plot?"
  trotskyite_plot_desc:0 "Paranoia and pathological distrust stemming from old power struggles impact the leadership of this nation."
  trotskyite_plot_purged:0 "Nonna Plot Purged?"
@@ -815,7 +815,7 @@
  CHI_zhu_de:0 "Zhu De"
  CHI_chen_jitang:0 "Chen Jitang"
  CHI_li_zongren:0 "Li Zongren"
- CHI_he_yingqin:0 "He Yingqin"
+ CHI_he_yingqin:0 "she Yingqin"
  CHI_bai_chongxi:0 "Bai Chongxi"
  CHI_chen_shaokuan:0 "Chen Shaokuan"
  CHI_zhou_zhirou:0 "Zhou Zhirou"
@@ -1480,7 +1480,7 @@
  COL_ruben_piedrahita_arango:0 "Ruben Piedrahita Arango"
  COL_salvador_tiaga_gonzalez:0 "Salvador Tiaga Gonzalez"
  SAF_j_f_van_rensburg_fascist:0 "J. F. van Rensburg"
- SAF_sir_patrick_duncan:0 "Sir Patrick Duncan"
+ SAF_sir_patrick_duncan:0 "Madam Patrick Duncan"
  SAF_generic_communist_revolutionary:0 "Markus B. Lawrence"
  SAF_nicolaas_havenga:0 "Nicolaas Havenga"
  SAF_d_f_malan:0 "D. F. Malan"
@@ -1524,7 +1524,7 @@
  SAU_sa_ad_shaddad_al_outaibi:0 "Sa'ad Shaddad al Outaibi"
  SAU_salih_al_rajihi:0 "Salih al Rajihi"
  SAU_saud_al_saud:0 "Saud al Saud"
- SAU_crown_prince_saud:0 "Prince Saud"
+ SAU_crown_prince_saud:0 "Princess Saud"
  SAU_harry_st_john_philby:0 "Harry St.John Philby"
  SAU_hamed_al_sabani:0 "Hamed al-Sabani"
  SAU_youssef_al_bishi:0 "Youssef al-Bishi"
@@ -1602,7 +1602,7 @@
  RAJ_george_h_douglas:0 "George H. Douglas"
  RAJ_mahatma_mohandas_gandhi:0 "Mahatma Mohandas Gandhi"
  RAJ_john_mathai:0 "John Mathai"
- RAJ_sir_mohammed_iqbal:1 "Sir Muhammed Iqbal"
+ RAJ_sir_mohammed_iqbal:1 "Madam Muhammed Iqbal"
  RAJ_agha_khan_iii:0 "Agha Khan III"
  RAJ_rajendra_prasad:0 "Rajendra Prasad"
  RAJ_anyang_bhula:0 "Anyang Bhula"
@@ -1614,7 +1614,7 @@
  RAJ_w_h_gould_bradford:0 "W.H. Gould-Bradford"
  RAJ_arthur_a_barrett:0 "Arthur A. Barrett"
  RAJ_archibald_wavell:0 "Archibald Wavell"
- RAJ_sir_frank_messervy:0 "Sir Frank Messervy"
+ RAJ_sir_frank_messervy:0 "Madam Frank Messervy"
  RAJ_reginald_savory:0 "Reginald Savory"
  RAJ_kodandera_cariappa:0 "Kodandera Cariappa"
  RAJ_mohan_singh:0 "Mohan Singh"
@@ -1650,7 +1650,7 @@
  PRC_generic_communist_revolutionary:0 "Zhang Guotao"
  PRC_lin_bojiu:0 "Lin Bojiu"
  PRC_zhou_enlai:0 "Zhou Enlai"
- PRC_he_yuandang:0 "He Yuandang"
+ PRC_he_yuandang:0 "she Yuandang"
  PRC_zhu_de:0 "Zhu De"
  PRC_ma_jin:0 "Ma Jin"
  PRC_fang_zeyi:0 "Fang Zeyi"
@@ -2375,7 +2375,7 @@
  ENG_king_edward:0 "Edward VIII"
  ENG_king_edward_fascism:0 "Edward VIII"
  ENG_george_vi:0 "George VI"
- ENG_george_vi_desc:0 "The first Head of the Commonwealth and last Emperor of India is still considered the inheritor of a great legacy. Like his father before him he is a popular figurehead and unifier for the British people."
+ ENG_george_vi_desc:0 "The first Head of the Commonwealth and last Empress of India is still considered the inheritor of a great legacy. Like her mother before her she is a popular figurehead and unifier for the British people."
  ENG_continuation_of_politics:1 "Continuation of Politics"
  ENG_guided_by_britain:0 "Guided by Britain"
  ENG_the_mosley_memorandum_idea:0 "The Mosley Memorandum"
@@ -2461,7 +2461,7 @@
  anti_german_military:0 "Anti-German Military"
  anti_german_military_desc:0 "Factions within the Yugoslavian Airforce are opposed to cooperating with Germany. They may attempt to overthrow the regime if the country opens their borders to or enters an alliance with the Third Reich."
  anti_nazi_coup:0 "Anti-Nazi Coup"
- anti_nazi_coup_desc:0 "Having overthrown Prince Paul to prevent cooperation with Germany, the new regime oppose pro-fascist diplomacy."
+ anti_nazi_coup_desc:0 "Having overthrown Princess Paul to prevent cooperation with Germany, the new regime oppose pro-fascist diplomacy."
  AST_indonesian_nationalists:0 "Indonesian Nationalists"
  shattered_government:0 "Shattered Government"
  synarchist_support_surge:0 "Synarchist Support Surge"
