--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -78,17 +78,17 @@
  SOV_lavrenty_beriya:0 "Lavrenty Beriya"
  SOV_vsevolod_merkulov:0 "Vsevolod Merkulov"
  SOV_maksim_litvinov:0 "Maksim Litvinov"
- SOV_ivan_smirnov:0 "Ivan Smirnov"
+ SOV_ivan_smirnov:0 "Ekaterina"
  SOV_ivar_smilga:0 "Ivar Smilga"
  SOV_karl_radek:0 "Karl Radek"
  SOV_yevgeny_preobrazhensky:0 "Yevgeni Preobrazhensky"
  SOV_aleksandr_shlyapnikov:0 "Aleksandr Shlyapnikov"
  SOV_lev_trotsky:0 "Nonna"
  SOV_nikolay_bukharin:0 "Alina"
- SOV_aleksey_rykov:0 "Aleksey Rykov"
+ SOV_aleksey_rykov:0 "Natalia"
  SOV_mikhail_tomsky:0 "Mikhail Tomsky"
- SOV_grigory_zinovyev:0 "Grigory Zinovyev"
- SOV_lev_kamenev:0 "Lev Kamenev"
+ SOV_grigory_zinovyev:0 "Polina"
+ SOV_lev_kamenev:0 "Olga"
  SOV_martemyan_ryutin:0 "Martemyan Ryutin"
  SOV_grigory_sokolnikov:0 "Grigory Sokolnikov"
  SOV_patriarch_sergy:0 "Patriarch Sergy"
@@ -788,7 +788,7 @@
  SWE_claes_lindstrom:0 "Claes Lindström"
  
  #YUGOSLAVIA
- YUG_prince_paul:0 "Prince Paul"
+ YUG_prince_paul:0 "Princess Paul"
  YUG_paul_i:0 "Paul I"
  YUG_milan_stojadinovic:0 "Milan Stojadinović"
  YUG_milan_grol:0 "Milan Grol"
