--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -409,7 +409,7 @@
  NOR_fascism_party:0 "NS"
  NOR_fascism_party_long:0 "Nasjonal Samling"
  NOR_Wedel-Jarlsberg_regency_name: "Wedel-Jarlsberg Regenten"
- NOR_Wedel-Jarlsberg_regency_long_name: "House Wedel-Jarlsberg Regency by appointment of King Haakon VII" 
+ NOR_Wedel-Jarlsberg_regency_long_name: "House Wedel-Jarlsberg Regency by appointment of Queen Haakon VII" 
  NOR_hoyre_name: "H"
  NOR_hoyre_long: "Høyre"
  NOR_arbeiderklassen_name: "ASP"
@@ -1065,7 +1065,7 @@
  TTS_communism_party:0 "Mezzogiornian Union Party"
  TTS_democratic_party:0 "Neapolitanian Republican Party"
  TTS_fascism_party:1 "Partito Partenopea Fascista"
- TTS_neutrality_party:0 "Kings Party"
+ TTS_neutrality_party:0 "Queens Party"
  transylvania_fascism_party_long:1 "Fascist Party"
  transylvania_fascism_party:0 "Fascist"
  SWE_kings_party: "The Royalist Movement"
