--- a/localisation/english/wtt_focus_l_english.yml
+++ b/localisation/english/wtt_focus_l_english.yml
@@ -39,7 +39,7 @@
  CHI_join_the_chinese_soviet_desc:1 "The revolution can only succeed if the Communists stand together. Of course, we must ensure that no counter-reactionary elements within the party attempts to derail the revolution before it even started."
  CHI_the_yanan_incident:0 "The Yan'an Incident"
  CHI_the_yanan_incident_effect_tt:1 "Ask §H[SOU.GetNameDef]§! for support to replace §H[WTT_communist_china.GetNameDef]§! as communist leader.\nThis will lead to a war with §H[WTT_communist_china.GetNameDef]§! if they refuse.\nThis deal with §H[SOU.GetNameDef]§! will open us up to demands from [SOU.GetLeader]\n"
- CHI_the_yanan_incident_desc:1 "The current leader of the party has turned his back on the socialist brothers in the Soviet Union. We should approach the Soviets to secure their support in carrying the revolution through all of China."
+ CHI_the_yanan_incident_desc:1 "The current leader of the party has turned her back on the socialist sisters in the Soviet Union. We should approach the Soviets to secure their support in carrying the revolution through all of China."
  CHI_opposition:0 "Opposition"
  CHI_opposition_effect_tooltip:0 "§H[WTT_current_china_leader.GetNameDef]§! can start a border war with us in response to this."
  CHI_opposition_desc:1 "The Central Government is corrupt and weak. The Communists wish to destroy 5000 years of Chinese history. This situation calls for a Great leader, someone who is willing to make the hard choices and unite the country - by any means necessary."
@@ -54,11 +54,11 @@
  CHI_seek_japanese_support:0 "Seek Japanese Support"
  CHI_seek_japanese_support_desc:1 "Both the Central Government and the communists have powerful allies. If we want to stand supreme at the end of this, we will have to find a guardian of our own."
  CHI_personal_leadership:0 "Personal Leadership"
- CHI_personal_leadership_desc:1 "Splitting command of the military risks an officer with ideas above his station trying to usurp power. We must ensure that our soldiers are always loyal to the government."
+ CHI_personal_leadership_desc:1 "Splitting command of the military risks an officer with ideas above her station trying to usurp power. We must ensure that our soldiers are always loyal to the government."
  CHI_cult_of_personality:0 "Cult of Personality"
  CHI_cult_of_personality_desc:1 "The people need to know who leads them through these dark days into the bright future beyond, as well as the many outstanding qualities that man has."
  CHI_provoke_border_clashes:1 "Border Clashes with the Nationalists"
- CHI_provoke_border_clashes_desc:1 "We can not risk all-out war just yet. A small, contained conflict allows us to gain valuable ground without being crushed outright. Ideally, we will strike right when our opponent has commited his forces elsewhere."
+ CHI_provoke_border_clashes_desc:1 "We can not risk all-out war just yet. A small, contained conflict allows us to gain valuable ground without being crushed outright. Ideally, we will strike right when our opponent has commited her forces elsewhere."
  CHI_defensive_posture:0 "Defensive Posture"
  CHI_defensive_posture_desc:1 "This conflict is a marathon, not a sprint. To challenge the other factions too early would invite disaster. For now, we will remain on the defensive."
  CHI_rapid_mobilization:0 "Rapid Mobilization"
@@ -200,7 +200,7 @@
  CHI_mission_to_the_us_soong_us_decision:0 "As long as §YSoong Mei-Ling§! is a §YPolitical Advisor§! the US will be able to support our war against §YJapan§!\n"
  CHI_mission_to_the_us_desc:0 "China has long had strong allies in the US. They represent the best chance of getting the support we need."
  CHI_hire_chennault:0 "Hire Chennault"
- CHI_hire_chennault_desc:0 "Claire Chennault is an American air warfare theorist who has shown an interest in working for us. We should hire him to rebuild our airforce."
+ CHI_hire_chennault_desc:0 "Claire Chennault is an American air warfare theorist who has shown an interest in working for us. We should hire her to rebuild our airforce."
  CHI_invite_the_flying_tigers:0 "Invite the Flying Tigers"
  CHI_invite_the_flying_tigers_desc:0 "Our friends in America have organized a volunteer group of pilots and bought a number of modern planes to support us. We just need to say so."
  CHI_sino_american_cooperative_organization:0 "Sino-American Cooperative Org."
@@ -345,7 +345,7 @@
  PRC_rectification_campaign:0 "Rectification Campaign"
  PRC_rectification_campaign_desc:0 "There have been a number of misconceptions about the course our struggle should take. We should give the misguided comrades a chance to acknowledge the error of their ways."
  PRC_maoism:0 "Maoism"
- PRC_maoism_desc:0 "The Great Chairman has spent long months developing his political theories into a coherent ideology that will guide our country forward."
+ PRC_maoism_desc:0 "The Great Chairwoman has spent long months developing her political theories into a coherent ideology that will guide our country forward."
  PRC_socialism_with_chinese_characteristics:1 "Marxism With Chinese Characteristics"
  PRC_socialism_with_chinese_characteristics_desc:1 "Although no doubt brilliant, Marx wrote from a specifically European perspective. China's particular situation will be reflected in our implementation of socialist policies."
  PRC_proclaim_the_peoples_republic:0 "Proclaim the People's Republic"
@@ -361,7 +361,7 @@
  PRC_strengthen_the_left_wing_of_the_kmt:0 "Strengthen the Left Wing of the KMT"
  PRC_strengthen_the_left_wing_of_the_kmt_desc:0 "The Nationalists have their own problems with internal factions trying to sabotage efforts to come to an agreement between our regimes. We should do everything in our power to ensure that our allies in the KMT win this power struggle."
  PRC_remove_chiang_kai_shek:0 "Remove Chiang Kai-Shek"
- PRC_remove_chiang_kai_shek_desc:0 "Despite our efforts, the Generalissimo still considers us to be communists at heart. His virulent opposition has become a problem. Measures will need to be taken."
+ PRC_remove_chiang_kai_shek_desc:0 "Despite our efforts, the Generalissimo still considers us to be communists at heart. her virulent opposition has become a problem. Measures will need to be taken."
  PRC_national_leadership:0 "National Leadership"
  PRC_national_leadership_desc:0 "With Kai-Shek gone, the last opposition to reunification is gone. It is only proper that we should take the lead in this combined government."
  PRC_land_redistribution:0 "Land Redistribution"
@@ -463,7 +463,7 @@
  JAP_greater_east_asian_co_prosperity_sphere:0 "Greater East-Asian Co-Prosperity Sphere"
  JAP_greater_east_asian_co_prosperity_sphere_desc:0 "The time of Western imperialism has come to an end. The peoples of Asia must band together and stand as a strong, unified continent, under our leadership. Asia for the Asiatics!"
  JAP_intervene_in_china:1 "Marco Polo Bridge Incident"
- JAP_intervene_in_china_desc:1 "[Root.GetNameDefCap] is poor in resources, but our neighbours are not. We must take from them what we lack, and only require an excuse to begin doing so. Such an excuse could be provided by a few enterprising soldiers, after which the Emperor will have no choice but to assent to a war, no matter how ill-prepared..."
+ JAP_intervene_in_china_desc:1 "[Root.GetNameDefCap] is poor in resources, but our neighbours are not. We must take from them what we lack, and only require an excuse to begin doing so. Such an excuse could be provided by a few enterprising soldiers, after which the Empress will have no choice but to assent to a war, no matter how ill-prepared..."
  JAP_secure_china:0 "Secure China"
  JAP_secure_china_desc:0 "Chinese resistance is proving to be stubborn and unceasing. We must redouble our efforts to pacifying the mainland with all haste."
  JAP_develop_chinese_resources:0 "Develop Chinese Resources"
@@ -508,13 +508,13 @@
  JAP_strengthen_the_divine_wind_effect_bba:0 "Enables the §HFixed Explosive Charge§! module"
  JAP_strengthen_the_divine_wind_desc:0 "Kamikaze, the tactics of the Special Attack Unit, have changed suicide attacks from an improvised last measure to an established doctrine. With new planes, essentially manned missiles, these attacks will be unstoppable."
  JAP_support_the_kodoha_faction:0 "Support the Kodoha Faction"
- JAP_support_the_kodoha_faction_desc:0 "A new faction has appeared, intent to take control of the government and strike north into the Soviet Union. For the sake of the Emperor and the Empire's future, we must ensure this faction prevails!"
+ JAP_support_the_kodoha_faction_desc:0 "A new faction has appeared, intent to take control of the government and strike north into the Soviet Union. For the sake of the Empress and the Empire's future, we must ensure this faction prevails!"
  JAP_challenge_the_zaibatsus:0 "Challenge the Zaibatsus"
- JAP_challenge_the_zaibatsus_desc:0 "The largest corporations of our nation have long had unprecedented political and economical power. We must remind them they are still subordinate to the Emperor's wishes."
+ JAP_challenge_the_zaibatsus_desc:0 "The largest corporations of our nation have long had unprecedented political and economical power. We must remind them they are still subordinate to the Empress's wishes."
  JAP_showa_restoration:0 "Showa Restoration"
- JAP_showa_restoration_desc:0 "The time for figureheads is long past, and the Emperor himself must take direct control of the state. Only then will our Empire be able to stand against the Western imperialists."
+ JAP_showa_restoration_desc:0 "The time for figureheads is long past, and the Empress herself must take direct control of the state. Only then will our Empire be able to stand against the Western imperialists."
  JAP_modern_shogunate:0 "Modern Shogunate"
- JAP_modern_shogunate_desc:0 "The Emperor must remain in a more ceremonial role, with strong middlemen who act in his name. This will certainly allow the Emperor's word to carry further and wider."
+ JAP_modern_shogunate_desc:0 "The Empress must remain in a more ceremonial role, with strong middlemen who act in her name. This will certainly allow the Empress's word to carry further and wider."
  JAP_prepare_for_war_with_the_soviet_union:1 "Prepare For War With [SOV.GetNameDef]"
  JAP_prepare_for_war_with_the_soviet_union_desc:1 "The [SOV.GetSovietThreatName] threat to our northern borders must be dealt with. We must begin preparations for a war with [SOV.GetNameDef]."
  SOV_communist_threat:0 "communist"
@@ -551,7 +551,7 @@
  JAP_purge_the_militarists:0 "Purge the Militarists"
  JAP_purge_the_militarists_desc:1 "Those who believe military force is the answer to everything must be purged from our islands, if we are to make room for more level-headed thinking. They can find their own way outside of our borders."
  JAP_the_showa_constitution:0 "The Showa Constitution"
- JAP_the_showa_constitution_desc:0 "We accept and respect our nation's imperial history. However, authoritarianism has no place in the Japan we want to build. We will maintain the Emperor as a figurehead leader, but we will limit his power in the constitution, much as is the case in many Western countries."
+ JAP_the_showa_constitution_desc:0 "We accept and respect our nation's imperial history. However, authoritarianism has no place in the Japan we want to build. We will maintain the Empress as a figurehead leader, but we will limit her power in the constitution, much as is the case in many Western countries."
  JAP_west_pacific_treaty_organization:0 "West Pacific Treaty Organization"
  JAP_west_pacific_treaty_organization_desc:0 "An alliance of our own with other asian nations will allow us to stand firmly against any potential threats to our new-found way of life."
  JAP_rekindle_the_old_alliance:0 "Rekindle the Old Alliance"
@@ -690,7 +690,7 @@
  MAN_chinese_leadership:0 "Ikedan Leadership"
  MAN_chinese_leadership_desc:0 "The Chi-Ha-Tan people need a Chi-Ha-Tan leader. We should publicly declare that we aim at nothing less than the full restoration of the Imperial Rule over all of China."
  MAN_vassalize_mengukuo:0 "Vassalize [MEN.GetName]"
- MAN_vassalize_mengukuo_desc:0 "The Princesas of [MEN.GetName] is not fit to stand side by side with the Empress of  [MAN.GetName]. It is time we end this silly experiment and put him in his proper place."
+ MAN_vassalize_mengukuo_desc:0 "The Princesas of [MEN.GetName] is not fit to stand side by side with the Empress of  [MAN.GetName]. It is time we end this silly experiment and put her in her proper place."
  MAN_national_cooperation_government:0 "National Cooperation Government"
  MAN_national_cooperation_government_desc:0 "We have received disturbing rumors that the Japanese are considering other Chinese politicians - commoners - to form a collaboration government. This is unacceptable. We must ensure that any Chinese territory taken by our combined forces is administered by us."
  MAN_the_two_emperors:0 "The Two Empresses"
@@ -724,16 +724,16 @@
  MAN_independence_war:0 "Independence War"
  MAN_independence_war_desc:0 "The time has come to throw off the shakles of oppression and fight for our ancient freedoms. [MAN.GetName] will be the first part of China that breathes free from all foreign oppression."
  MAN_imperial_divinity:0 "Imperial Divinity"
- MAN_imperial_divinity_desc:0 "In times past, the Emperors of China were revered as living gods. We must reconnect the current Emperor to this ancient tradition."
+ MAN_imperial_divinity_desc:0 "In times past, the Empresses of China were revered as living gods. We must reconnect the current Empress to this ancient tradition."
  MAN_imperial_university:0 "Imperial University"
  MAN_imperial_university_desc:0 "The Empire requires bright people to further its cause. We should create a place where the best and brightest of our people come together to teach and learn from one another."
  MAN_move_capitals:1 "Move the Capital"
- MAN_move_capitals_desc:0 "The ancient capital of all of China has always been Bejing. Now that it is has been retaken, we can return the Emperor in triumph to his old home."
+ MAN_move_capitals_desc:0 "The ancient capital of all of China has always been Bejing. Now that it is has been retaken, we can return the Empress in triumph to her old home."
  MAN_claim_the_mandate_of_heaven:0 "Claim the Mandate of Heaven"
- MAN_claim_the_mandate_of_heaven_desc:0 "Our victories in the war have made it clear that heaven itself has judged the Emperor just and worthy of the Celestial Throne. Any doubt that he is not the legitimate ruler of all of China must vanish in the face of such overwhelming evidence."
+ MAN_claim_the_mandate_of_heaven_desc:0 "Our victories in the war have made it clear that heaven itself has judged the Empress just and worthy of the Celestial Throne. Any doubt that she is not the legitimate ruler of all of China must vanish in the face of such overwhelming evidence."
  MAN_reclaim_the_empire:0 "Reclaim the Empire"
  MAN_reclaim_the_empire_desc:0 "Now that we have won our freedom, it is time to carry on the war against the traitors and rebels in the rest of China. We will rule this country, or perish in the attempt."
  MAN_assert_our_authority:0 "Assert Our Authority"
- MAN_assert_our_authority_desc:0 "The rest of the country is internally divided. None of the usurpers and bandits calling themselves warlords and Chairmen are fit to rule. They will be brought to heel, and our enlightened rule will spread across all China."
+ MAN_assert_our_authority_desc:0 "The rest of the country is internally divided. None of the usurpers and bandits calling themselves warlords and Chairwomen are fit to rule. They will be brought to heel, and our enlightened rule will spread across all China."
  MAN_offer_vassalization:0 "Offer Vassalization"
  MAN_offer_vassalization_desc:0 "The war has torn the country apart. We can end it, if we offer those who have so far refused to take a side a place in our court."
