--- a/localisation/replace/gup_replace_l_english.yml
+++ b/localisation/replace/gup_replace_l_english.yml
@@ -45,7 +45,7 @@
  JAP_guide_the_zaibatsus: "Guide the Zaibatsus"
  JAP_guide_the_zaibatsus_desc: "Our academy's conglomerates can be close investors and economic architects and engineers to help propel further our economic capabilities. But we must find a way to get more resources to fuel such prospect."
  JAP_challenge_the_zaibatsus: "Challenge the Zaibatsus"
- JAP_challenge_the_zaibatsus_desc: "The largest corporations of our nation have long had unprecedented political and economical power. We must remind them they are still subordinate to the Emperor's wishes."
+ JAP_challenge_the_zaibatsus_desc: "The largest corporations of our nation have long had unprecedented political and economical power. We must remind them they are still subordinate to the Empress's wishes."
  JAP_national_mobilization_law: "National Mobilization Law"
  JAP_national_mobilization_law_desc: "Chi-Ha-Tan must now push in to action a rapid academical movement for its students in preperation for future ventures."
  JAP_national_research_policy: "National Research Policy"
