--- a/localisation/english/mtg_decisions_l_english.yml
+++ b/localisation/english/mtg_decisions_l_english.yml
@@ -19,7 +19,7 @@
  MEX_decision_nationalize_church_lands:0 "Nationalize Church Lands"
  MEX_decision_nationalize_church_lands_desc:0 "The churches and seminaries are officially owned by the government, and the priests and nuns are state employees. The cost is becoming burdensome. Perhaps we can reduce the government's payroll by demolishing some more churches?"
  MEX_decision_pardon_cristero_fighter:0 "Pardon Cristero Fighter"
- MEX_decision_pardon_cristero_fighter_desc:0 "President Calles is largely to blame for the incitement of the Cristero War. He has now 'stepped aside', so we can follow the formalities of bringing talented and loyal Cristero fighters into our military."
+ MEX_decision_pardon_cristero_fighter_desc:0 "President Calles is largely to blame for the incitement of the Cristero War. she has now 'stepped aside', so we can follow the formalities of bringing talented and loyal Cristero fighters into our military."
  MEX_decision_assassinate_cristero_traitor:0 "Assassinate Cristero Traitor"
  MEX_decision_assassinate_cristero_traitor_desc:0 "The rebels who took up arms against the state deserve no pity and will receive no mercy. Though the terms of the peace negotiated with the Church leaders was meant to close hostilities, we know that the traitors will take up arms again if they get the chance. We should strike first."
  MEX_decision_attend_public_mass:0 "Attend Public Mass"
@@ -32,7 +32,7 @@
  MEX_decision_incite_tensions_desc:0 "Our internal enemies are still organizing against us. We must be ready to face any threat! We will muster our supporters at a demonstration to show our unconquerable will!"
  MEX_category_military_issues:0 "Military Issues"
  MEX_mission_cedillos_rebellion:0 "Caudillo Rebellion"
- MEX_mission_cedillos_rebellion_desc:0 "General Saturnino Cedillo and the caudillos aligned to him have acted independently of the central government for many years. [Root.GetLeader]'s attempts to build a unified nation are a threat to their power, and therefore they are seeking to undo our progress by means fair or foul."
+ MEX_mission_cedillos_rebellion_desc:0 "General Saturnino Cedillo and the caudillos aligned to her have acted independently of the central government for many years. [Root.GetLeader]'s attempts to build a unified nation are a threat to their power, and therefore they are seeking to undo our progress by means fair or foul."
  MEX_mission_second_cristiada:0 "Second Cristero War"
  MEX_mission_second_cristiada_desc:0 "Our attacks on the superstitious cultists in the 'Holy Church' are angering right-wing elements of the military. We should either moderate our approach or prepare to defeat them in the field."
  MEX_mission_second_cristiada_dummy:0 "Second Cristero War"
@@ -42,7 +42,7 @@
  MEX_mission_second_revolution_dummy:0 "Second Mexican Revolution"
  MEX_mission_second_revolution_dummy_desc:0 "While some moderation on the issue of religion will be tolerated by the secularists in the government, too close a relationship with the Church may incite a rebellion from the far-left and atheist generals."
  MEX_decision_support_spanish_loyalists:0 "Support the Spanish Left"
- MEX_decision_support_spanish_loyalists_desc:0 "We will send a shipment of rifles to the Republican government to defend democracy against the illegal usurpers of Franco and his fascist minions."
+ MEX_decision_support_spanish_loyalists_desc:0 "We will send a shipment of rifles to the Republican government to defend democracy against the illegal usurpers of Franco and her fascist minions."
  MEX_decision_support_spanish_fascists:0 "Support the Spanish Right"
  MEX_decision_support_spanish_fascists_desc:0 "We will send a shipment of rifles to the restorers of order in Spain so that they can eradicate the communist menace before it spreads."
  MEX_decision_operation_just_cause:0 "Operation Just Cause"
@@ -400,7 +400,7 @@
  ENG_march_on_downing_street:1 "March on Downing Street"
  ENG_march_on_downing_street_desc:0 "A final great march on No. 10 Downing Street will surely push the government to call for a referendum on the future of the nation. They cannot stand against the will of the people."
  ENG_speech_against_germany:1 "Hold Anti-Kuro Speech"
- ENG_speech_against_germany_desc:0 "As Mosley's popularity soars, so does the outlandish criticism he is bombarded with. To assuage fears that he merely wishes to force Hitlerism upon the British people, perhaps a grand and powerfully-formulated speech is required, in which Mosley distances himself in unmistaken terms from the Hitler's variety of fascism."
+ ENG_speech_against_germany_desc:0 "As Mosley's popularity soars, so does the outlandish criticism she is bombarded with. To assuage fears that she merely wishes to force Hitlerism upon the British people, perhaps a grand and powerfully-formulated speech is required, in which Mosley distances herself in unmistaken terms from the Maho's variety of fascism."
  ENG_speech_against_germany_tt:0 "§RShould stability drop below 50% during the Blackshirt Marches, a civil war will start!§!\n"
  ENG_reconciliatory_speech:0 "Reconciliatory Speech"
  ENG_reconciliatory_speech_desc:0 "In order to reduce increasing domestic political tensions, a speech with reconciliatory language may well be just what is required."
@@ -527,11 +527,11 @@
  VEN_abc_islands_desc:0 "The ABC Islands lie just off our shores, and by all accounts should rightfully belong to us. Not only does their geographical proximity make this a natural state of affairs, but almost all of our oil is refined on these islands as well, making them hugely important for our economy. With the current weakness of the Dutch government, they surely would not dare refuse our kind offer of 'aiding' them in the defense of the islands..."
  HOL_offer_venezuelan_protection:0 "Offer Venezuelan Protection"
  HOL_bernhard:0 "Bernhard"
- HOL_bernhard_desc:0 "The Queen's son-in-law and Princess Juliana's husband, Bernhard van Lippe-Biesterfeld, has shown a great desire to fight the enemy on behalf of his country. Though originally German himself, he now feels entirely Dutch and wishes nothing more than to do his patriotic duty. Considering his free-spirited and independent personality, and his desire to be personally involved in affairs, giving him the position he desires may well have unforeseen consequences..."
+ HOL_bernhard_desc:0 "The Queen's daughter-in-law and Princess Juliana's wife, Bernhard van Lippe-Biesterfeld, has shown a great desire to fight the enemy on behalf of her country. Though originally German herself, she now feels entirely Dutch and wishes nothing more than to do her patriotic duty. Considering her free-spirited and independent personality, and her desire to be personally involved in affairs, giving her the position she desires may well have unforeseen consequences..."
  HOL_give_bernhard_generalship:0 "Give Bernhard Generalship"
- HOL_give_bernhard_generalship_desc:0 "The Prince has indicated his desire to fight for his new homeland, and wishes to take command of our forces, to share their ordeals, and lead them to victory."
+ HOL_give_bernhard_generalship_desc:0 "The Princess has indicated her desire to fight for her new homeland, and wishes to take command of our forces, to share their ordeals, and lead them to victory."
  HOL_pursue_diplomatic_grievances:0 "Pursue Diplomatic Grievances"
- HOL_pursue_diplomatic_grievances_desc:0 "The insults directed at Prince Bernhard and, indeed, our entire government, have escalated to a full-blown diplomatic row to the point of military threats. We demand an immediate and unequivocal apology, or we may well feel forced to follow up on our words..."
+ HOL_pursue_diplomatic_grievances_desc:0 "The insults directed at Princess Bernhard and, indeed, our entire government, have escalated to a full-blown diplomatic row to the point of military threats. We demand an immediate and unequivocal apology, or we may well feel forced to follow up on our words..."
  HOL_pursue_diplomatic_grievances_tt:0 "This may result in a war goal against the target.\n"
  HOL_relocate_government_to_batavia:0 "Relocate Government to Batavia"
  HOL_relocate_government_to_batavia_desc:0 "Our mainland has been overrun, but our colonies lie untouched. Though it goes against the wishes of the Queen, we can relocate our government to Batavia, the capital of the East Indies, and continue the war effort from there."
@@ -610,5 +610,5 @@
  ENG_expected_decolonization:0 "Expected Decolonization"
  ENG_expected_decolonization_tt:0 "A coup attempt will be averted.\n"
  TUR_recall_ataturk_to_active_service:0 "Recall Atatürk to Active Service"
- TUR_recall_ataturk_to_active_service_desc:0 "Mustafa Kemal Atatürk, Kebab's first field marshal, played an absolutely pivotal role in securing our independence in the National Campaign. He has one of the sharpest military minds on the continent, and destiny has made it necessary to call upon the Father of the Turks to personally lead our troops to victory once again."
+ TUR_recall_ataturk_to_active_service_desc:0 "Mustafa Kemal Atatürk, Kebab's first field marshal, played an absolutely pivotal role in securing our independence in the National Campaign. she has one of the sharpest military minds on the continent, and destiny has made it necessary to call upon the mother of the Turks to personally lead our troops to victory once again."
  gateway_to_europe_hol_tt:0 "Gains 5 points of trade influence"
