--- a/localisation/english/wtt_decisions_l_english.yml
+++ b/localisation/english/wtt_decisions_l_english.yml
@@ -317,11 +317,11 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  GER_reichskommissariat_belgien_nordfrankreich:0 "Reichskommissariat Belgien-Nordfrankreich"
  GER_reichskommissariat_ostland:0 "Reichskommissariat Ostland"
  GER_reichskommissariat_ukraine:0 "Reichskommissariat Ukraine"
- reinstate_wilhelm_iv_succession_rights:0 "Reinstate Prince Wilhelm's Right of Succession"
- reinstate_wilhelm_iv_succession_rights_desc:1 "Kaiser Wilhelm III's son was forced to renounce his right of succession by desiring to marry against the approval of the then-head-of-family Wilhelm II. As Wilhelm III has now taken over that role, he might be able to pressure his exiled father in supporting a reversal of this decision."
+ reinstate_wilhelm_iv_succession_rights:0 "Reinstate Princess Wilhelm's Right of Succession"
+ reinstate_wilhelm_iv_succession_rights_desc:1 "Kaiser Wilhelm III's daughter was forced to renounce her right of succession by desiring to marry against the approval of the then-head-of-family Wilhelm II. As Wilhelm III has now taken over that role, she might be able to pressure her exiled mother in supporting a reversal of this decision."
  reinstate_wilhelm_iv_succession_rights_tt:0 "The line of succession is altered.\n"
  modernize_the_succession_laws:0 "Modernize the Succession Laws"
- modernize_the_succession_laws_desc:0 "The current Kaiser's son, the to-be Wilhelm IV, only has two daughters as heirs. We must secure the line of succession, and so the succession laws must be modernized to allow Princess Felicitas to reign, when the time comes."
+ modernize_the_succession_laws_desc:0 "The current Kaiser's daughter, the to-be Wilhelm IV, only has two daughters as heirs. We must secure the line of succession, and so the succession laws must be modernized to allow Princess Felicitas to reign, when the time comes."
  modernize_the_succession_laws_tt:0 "Women may inherit the throne.\n"
  request_restoration_of_british_titles:0 "Request Restoration of British Titles"
  request_restoration_of_british_titles_desc:0 "In 1917 the British parliament voted to revoke all British peerages and royal titles from German Royal and Princely families. Now that we are allies, and are enjoying excellent relations, perhaps it is time to request the reversal of this decision."
@@ -355,7 +355,7 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  USA_homeland_defense_desc:1 "The enemy has set foot on the soil of our proud nation. The American people will rise up and push the invaders back into the sea!"
  USA_aid_britain:0 "Aid Britain"
  USA_establish_personal_communication_with_former_naval_person:0 "Correspondence with Former Naval Person"
- USA_establish_personal_communication_with_former_naval_person_desc:0 "A new leader has assumed the role of First Minister in the [ENG.GetName]. We must open a personal dialogue with him, helping us to prepare and coordinate for our inevitable entry into the war."
+ USA_establish_personal_communication_with_former_naval_person_desc:0 "A new leader has assumed the role of First Minister in the [ENG.GetName]. We must open a personal dialogue with her, helping us to prepare and coordinate for our inevitable entry into the war."
  USA_battle_domestic_isolationism:0 "Combat Domestic Isolationism"
  USA_battle_domestic_isolationism_desc:0 "If isolationist elements would have it their way, we would be defenseless against any hostile nation. For our own good, we must begin deconstructing the prevalent isolationist rhetoric."
  USA_emergency_arms_deliveries:0 "Emergency Arms Deliveries"
@@ -912,22 +912,22 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  CHI_industrial_evacuations_add_AF:0 "Add 75% of §YArms Factories§! removed.\n"
  CHI_industrial_evacuations_add_IC:0 "Add 75% of §YCivilian Factories§! removed.\n"
  recall_von_lettow_vorbeck:0 "Recall Paul von Lettow-Vorbeck"
- recall_von_lettow_vorbeck_desc:0 "With the Hohenzollern restored to the throne, the old Lion of East Africa once again offers his services."
+ recall_von_lettow_vorbeck_desc:0 "With the Hohenzollern restored to the throne, the old Lion of East Africa once again offers her services."
  GER_sharpen_air_safety_regulations:0 "Sharpen Air Safety Regulations"
  GER_sharpen_air_safety_regulations_desc:0 "With more rigid safety regulations in place, we can prevent some of the more common causes for catastrophic accidents, including those with airships."
  MAN_recruit_bandits_north:0 "Recruit the Northern Delinquents"
- MAN_recruit_bandits_north_desc:0 "Every bullet spent hunting down Delinquents is one less available for the fight to come. Instead of fighting our own subjects, we should offer them a way to redeem themselves through service to the Emperor."
+ MAN_recruit_bandits_north_desc:0 "Every bullet spent hunting down Delinquents is one less available for the fight to come. Instead of fighting our own subjects, we should offer them a way to redeem themselves through service to the Empress."
  MAN_recruit_bandits_west:0 "Recruit the Western Delinquents"
- MAN_recruit_bandits_west_desc:0 "Every bullet spent hunting down Delinquents is one less available for the fight to come. Instead of fighting our own subjects, we should offer them a way to redeem themselves through service to the Emperor."
+ MAN_recruit_bandits_west_desc:0 "Every bullet spent hunting down Delinquents is one less available for the fight to come. Instead of fighting our own subjects, we should offer them a way to redeem themselves through service to the Empress."
  MAN_recruit_bandits_east:0 "Recruit the Eastern Delinquents"
- MAN_recruit_bandits_east_desc:0 "Every bullet spent hunting down Delinquents is one less available for the fight to come. Instead of fighting our own subjects, we should offer them a way to redeem themselves through service to the Emperor."
+ MAN_recruit_bandits_east_desc:0 "Every bullet spent hunting down Delinquents is one less available for the fight to come. Instead of fighting our own subjects, we should offer them a way to redeem themselves through service to the Empress."
  MAN_recruit_bandits_generic:0 "Recruit Delinquents Remnants"
- MAN_recruit_bandits_generic_desc:0 "Our prisons and work camps are filled with those who once fought against us. We need every soldier and every rifle in the fight for our freedom. The Emperor could show his legendary mercy and grace by giving these criminals a way to redeem themselves through service."
+ MAN_recruit_bandits_generic_desc:0 "Our prisons and work camps are filled with those who once fought against us. We need every soldier and every rifle in the fight for our freedom. The Empress could show her legendary mercy and grace by giving these criminals a way to redeem themselves through service."
  MAN_release_bandits:0 "Release the Delinquents"
- MAN_release_bandits_desc:0 "The former bullies and lowlives have shown that they are willing to sacrifice for their Emperor and can now be safely released back into society."
+ MAN_release_bandits_desc:0 "The former bullies and lowlives have shown that they are willing to sacrifice for their Empress and can now be safely released back into society."
  MAN_war_preparations:0 "Independence War"
  MAN_raise_manchu_banner:0 "Raise the Banners"
- MAN_raise_manchu_banner_desc:0 "In the days of old, the Qing Emperors could call upon their bannermen to fight in their wars. Although times have changed, the same principles apply. The house of the Qing requires the services of their banners once more."
+ MAN_raise_manchu_banner_desc:0 "In the days of old, the Qing Empresses could call upon their bannermen to fight in their wars. Although times have changed, the same principles apply. The house of the Qing requires the services of their banners once more."
  MAN_disband_the_banners:0 "Disband the Banners"
  MAN_disband_the_banners_desc:0 "Their service complete, the Manchu banners can once again be sent to their homes and families - until they are required once again."
  MAN_fund_underground_gun_shops:0 "Create Underground Workshops"
@@ -939,7 +939,7 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  MAN_prepare_to_seize_arms:0 "Prepare to seize Japanese Arms Depots"
  MAN_prepare_to_seize_arms_desc:0 "The depots and supply dumps spread around the country are poorly guarded. A well-planned and timed assault could take them with a minimum of casualties, giving us access to modern arms and at the same time depriving the Japanese of ammunition and supplies. Spending more time and resources on this will allow us to seize more depots."
  MAN_seize_arms:0 "Execute the Plan"
- MAN_seize_arms_desc:0 "Strike swiftly! FOR THE EMPEROR!"
+ MAN_seize_arms_desc:0 "Strike swiftly! FOR THE Empress!"
  MAN_can_prepare_more_tt:0 "Further preparations can still be made to seize additional depots.\n"
  develop_abu_dhabi_oil_fields:0 "Develop Abu Dhabi Oil Fields"
  develop_kuwait_oil_fields:0 "Develop Burgan Oil Fields"
